# Solana-Dev-Course

./: .gitignore
module 01 (Client Interaction with the Solana Network)/01  Read data from the network/src/: index.ts
module 01 (Client Interaction with the Solana Network)/01  Read data from the network/src/sol-helpers/: getBalance.ts  getBalanceUsingJSONRPC.ts
module 01 (Client Interaction with the Solana Network)/02  Write data to the network/: package.json  tsconfig.json
module 01 (Client Interaction with the Solana Network)/02  Write data to the network/src/: index.ts  personalKeys.ts
module 01 (Client Interaction with the Solana Network)/02  Write data to the network/src/sol-helpers/: nonNativeInstructionsTransaction.ts  transferSol.ts
module 01 (Client Interaction with the Solana Network)/03 Interact With Wallets/: package.json
module 03/createaBasicProgramPart1-HandleInstruction/: noteInstruction.rs
module 03/solana-hello-world-client/: package.json
module 03/solana-hello-world-client/src/: index.ts
module 04/solana-local-environment-first-time/client/: package.json
module 04/solana-local-environment-first-time/client/src/: index.ts  initializeKeypair.ts
module 04/solana-local-environment-first-time/local-solana-environment-project-first-time/: Cargo.toml
module 04/solana-local-environment-first-time/local-solana-environment-project-first-time/src/: lib.rs
rust docs/: Create-a-Basic-Program-Part#1-Handle-Instruction.txt  Local-Program-Development-Instruction.txt  Rust-State-Managment.txt  helloWorldInstructionModule3.txt
(+4 files in other folders)
